# tree-sitter-clojure

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-conao3_clojure.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_conao3_clojure/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConao3Clojure/: conao3_clojure.h
bindings/swift/TreeSitterConao3ClojureTests/: TreeSitterConao3ClojureTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: character.txt  collection.txt  comment.txt  keyword.txt  number.txt  symbol.txt
