[package]
name = "tree-sitter-conao3-clojure"
description = "Conao3 Clojure parser"
version = "0.1.0"
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "conao3-clojure"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/conao3/tree-sitter-conao3-clojure"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
